--- a/index.html
+++ b/index.html
@@ -8,41 +8,58 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg" :class="navBarTheme">
         <div class="container-fluid">
             <a href="#" class="navbar-brand">My Vue</a>
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li v-for="(link, index) in links" class="nav-item" :key="index">
-                    <a :href="link.url" class="nav-link" aria-current="page">{{ link.text }}</a>
+                <li v-for="(page,index) in pages" class="nav-item" :key="index">
+                    <a @click.prevent="activePage = index" :href="page.link.url" class="nav-link" :class="{active: activePage == index}" aria-current="page">{{ page.link.text }}</a>
                 </li>
             </ul>
+            <form class="d-felx">
+                <button class="btn btn-primary" @click.prevent="useDarkNav = !useDarkNav">Theme</button>
+            </form>
         </div>
     </nav>
     <div id="content" class="container">
-        <h1>{{ pageTitle }}</h1>
-        <p>{{ content }}</p>
+        <h1>{{ pages[activePage].pageTitle }}</h1>
+        <p>{{ pages[activePage].content }}</p>
     </div>
     
     <script>
         Vue.createApp({
-            data(){
-                return {
-                    links: [
-                        {text: 'Home', url: 'index.html'},
-                        {text: 'About', url: 'about.html'},
-                        {text: 'Contact', url: 'contact.html'}
-                    ]
+            computed: {
+                navBarTheme(){
+                    return{
+                        'navbar-light bg-light': !this.useDarkNav, 
+                        'navbar-dark bg-dark': this.useDarkNav
+                    }
                 }
-            }
-        }).mount('nav');
-        Vue.createApp({
+            },
             data(){
                 return {
-                    pageTitle: 'Vue',
-                    content: 'testing testing testing testing'
+                    activePage: 0,
+                    useDarkNav: false,
+                    pages: [
+                        {
+                            link: {text: 'Home', url: 'index.html'},
+                            pageTitle: 'Home Page',
+                            content: 'This is the home content'
+                        },
+                        {
+                            link: {text: 'About', url: 'about.html'},
+                            pageTitle: 'About Page',
+                            content: 'This is the about content'
+                        },
+                        {
+                            link: {text: 'Contact', url: 'contact.html'},
+                            pageTitle: 'Contact Page',
+                            content: 'This is the contact content'
+                        }
+                    ]
                 };
             }
-        }).mount('#content');
+        }).mount('body');
     </script>
 </body>
 </html>
